# Texlive-Ondemand

./: .gitignore  CMakeLists.txt  Dockerfile
texliveapp/: MANIFEST.in  README.md  requirements.txt  setup.py  texliveondemandapp-0.1-py3-none-any.whl
texliveapp/texliveapp/: wsgi.py
texliveondemand/: README.md  pdftex.c  setup.py  texliveondemand.c  xetex.c
texliveondemandapp/: __init__.py  app.py  requirements.txt  setup.py
texliveondemandapp/app/: app.py  wsgi.py
